test/oscar/compiler/errors/poolActorNumber.oscar
message testNow()


actor Tester() {
  
  receive = {
    | testNow() => {
        println("Error");
    }
  }
}

def main() => unit = {
  pool<Tester> pool1 = spawn pool<Tester>({}, "3");
  message<testNow>() |>> pool1;
}